[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/bottle.png" type="Texture" id=1]
[ext_resource path="res://scripts/bottle.gd" type="Script" id=2]
[ext_resource path="res://sprites/water.png" type="Texture" id=3]
[ext_resource path="res://sprites/ok.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 72 )

[node name="Bottle" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Status" type="Sprite" parent="Sprites"]
position = Vector2( 0, -88 )
texture = ExtResource( 4 )

[node name="Slot4" type="Sprite" parent="Sprites"]
position = Vector2( 0, -33 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="Slot3" type="Sprite" parent="Sprites"]
position = Vector2( 0, -3 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="Slot2" type="Sprite" parent="Sprites"]
position = Vector2( 0, 27 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="Slot1" type="Sprite" parent="Sprites"]
position = Vector2( 0, 57 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )
